plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'
description = 'StudentManagementSystem'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//Thymeleaf
	//implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	//OpenAPI Generator
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    //apache commons lang
    implementation 'org.apache.commons:commons-lang3:3.14.0'

	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//MySQLドライバ
	runtimeOnly 'com.mysql:mysql-connector-j'

	//MyBatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	//APサーバー(Tomcat)
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

	//SpringBoot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//MyBatis Test
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'

	//H2(InMemoryDB)
	testImplementation 'com.h2database:h2:2.2.224'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
